--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "electron": "^7.1.9",
     "fs": "0.0.1-security",
     "jsdoc": "^3.6.3",
+    "minimist": "^1.2.5",
     "mocha": "^7.0.0",
     "spectron": "^9.0.0"
   }
